--- a/TestAspWebApi/TestAspWebApi/Properties/launchSettings.json
+++ b/TestAspWebApi/TestAspWebApi/Properties/launchSettings.json
@@ -4,30 +4,27 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-<<<<<<<< HEAD:TestAspWebApi/TestAspWebApi/Properties/launchSettings.json
       "applicationUrl": "http://localhost:4868",
       "sslPort": 44384
     }
   },
   "profiles": {
-    "TestAspWebApi": {
-========
-      "applicationUrl": "http://localhost:2390",
-      "sslPort": 44335
-    }
-  },
-  "profiles": {
-    "MyWebAPI": {
->>>>>>>> c12837bc9ea91571e79e010cb27ecc9f4d8335eb:MyWebApi/MyWebAPI/Properties/launchSettings.json
+    "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-<<<<<<<< HEAD:TestAspWebApi/TestAspWebApi/Properties/launchSettings.json
-      "applicationUrl": "https://localhost:7099;http://localhost:5032",
-========
-      "applicationUrl": "https://localhost:7021;http://localhost:5184",
->>>>>>>> c12837bc9ea91571e79e010cb27ecc9f4d8335eb:MyWebApi/MyWebAPI/Properties/launchSettings.json
+      "applicationUrl": "http://localhost:5235",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "https": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7070;http://localhost:5235",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
