--- a/TestAspWebApi/TestAspWebApi/appsettings.json
+++ b/TestAspWebApi/TestAspWebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "cnn": "Server=.;Database = Task1; Integrated Security = True;"
+    "Default": "Data Source={Desktop};Initial Catalog={DatabaseName};Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
