Crud Category & Product

--- a/TestAspWebApi/TestAspWebApi/appsettings.json
+++ b/TestAspWebApi/TestAspWebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source={Desktop};Initial Catalog={DatabaseName};Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "Default": "Data Source=LAPTOP-753E617N\\TUANHUY1104PRO;Initial Catalog=TestAspWebApi;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
