--- a/TestAspWebApi/Core/Core.csproj
+++ b/TestAspWebApi/Core/Core.csproj
@@ -7,9 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Contract\Repository Contract\" />
     <Folder Include="Contract\Services Contract\" />
-    <Folder Include="DTO\" />
+    <Folder Include="DTO\Product\" />
   </ItemGroup>
 
 </Project>
