--- a/TestAspWebApi/TestAspWebApi/appsettings.json
+++ b/TestAspWebApi/TestAspWebApi/appsettings.json
@@ -9,5 +9,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "TestUser",
+    "ValidIssuer": "https://localhost:7070",
+    "Secret": "Test"
+  }
 }
