Fix Products Services

--- a/TestAspWebApi/TestAspWebApi/appsettings.json
+++ b/TestAspWebApi/TestAspWebApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"Default": "Data Source=LAPTOP-753E617N\\TUANHUY1104PRO;Initial Catalog=TestAspWebApi;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-    "Default": "Server=.;Database=Task1;Integrated Security=True;"
+    "Default": "Data Source=LAPTOP-753E617N\\TUANHUY1104PRO;Initial Catalog=TestAspWebApi;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    //"Default": "Server=.;Database=Task1;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
